# shario

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: come_up_with_name.rs  lib.rs  main.rs  messages.rs
src/shar/: crdt.rs  error.rs  mod.rs  prelude.rs  test.rs  types.rs
src/shar/core/: buffer.rs  mod.rs  operation.rs  queue.rs  tree.rs
src/shar/io/: io_info.rs  mod.rs  network.rs
src/shar/utils/: mod.rs
test_material/: test.txt
