[package]
name = "shario"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
# IO
tokio = {version = "1.51.0", features = ["rt", "net", "fs", "io-util"]}
# for command line interfaces
# clap = {version = '4', features = ["cargo"]}

[dev-dependencies]
# more usable error handling / tests
anyhow = "1"
